Crash on entering Grease Pencil Sculpt Mode #57611

Closed
opened 2018-11-04 14:09:13 +01:00 by William Reynish · 6 comments

System Information
MacOS 10.13.6
iMac (Retina 5K, 27-inch, Late 2015)
AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: (example: 2.80 0d69a5aa34)
Worked: (?)

Short description of error
On certain GP objects, going to Sculpt Mode will immediately crash Blender.

Exact steps for others to reproduce the error
With the selected GP object selected, enter Sculpt Mode. Crash (Segfault 11)

The_film_5.blend

**System Information** MacOS 10.13.6 iMac (Retina 5K, 27-inch, Late 2015) AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: (example: 2.80 0d69a5aa349) Worked: (?) **Short description of error** On certain GP objects, going to Sculpt Mode will immediately crash Blender. **Exact steps for others to reproduce the error** With the selected GP object selected, enter Sculpt Mode. Crash (Segfault 11) [The_film_5.blend](https://archive.blender.org/developer/F5368563/The_film_5.blend)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscriber: @antoniov

Added subscriber: @antoniov

I get the error, but when try to simplify the file removing collections I get a lot of crash not related to GP.

Could you try to simplify the file?

Are you getting this error only with this file? Sometimes if you get a crash (specially with alpha versions) the file is damaged and it's very difo find why is crashing.

I get the error, but when try to simplify the file removing collections I get a lot of crash not related to GP. Could you try to simplify the file? Are you getting this error only with this file? Sometimes if you get a crash (specially with alpha versions) the file is damaged and it's very difo find why is crashing.

I have seen the error is related to multiedit and locked layers. If you need work while I found the error, unlock all layers before enter in sculpt mode.

I have seen the error is related to multiedit and locked layers. If you need work while I found the error, unlock all layers before enter in sculpt mode.
Antonio Vazquez self-assigned this 2018-11-04 18:20:42 +01:00

This issue was referenced by 665efe401a

This issue was referenced by 665efe401aa91b3b90dc03dac2df187c249f3ae6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57611
No description provided.