Fix T57611: Crash on entering Grease Pencil Sculpt Mode

The problem was when some layers was locked in multiedit. The cache size was not checked and gets an segment fault.